--- a/CourseManagementPortalWebUI/Views/Attendances/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Attendances/Create.cshtml
@@ -14,6 +14,7 @@
     <div class="form-group">
         <label asp-for="Note">Note:</label>
         <textarea class="form-control" asp-for="Note"></textarea>
+        <span asp-validation-for="Note" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -26,3 +27,7 @@
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
