--- a/CourseManagementPortalWebUI/Views/Courses/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Courses/Create.cshtml
@@ -5,7 +5,7 @@
 @model CourseModel
 
 @{
-    if (Model == null)
+    if (Model.Id == 0)
     {
         <h2>Add Course</h2>
     }
@@ -15,22 +15,29 @@
     }
 }
 <form asp-controller="Courses" asp-action="Create">
-    <input asp-for="Id" hidden />
+    <input asp-for="Id" hidden/>
 
     <div class="form-group">
         <label asp-for="Name">Name:</label>
         <input type="text" class="form-control" asp-for="Name">
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Duration">Duration (Month):</label>
         <input type="number" class="form-control" asp-for="Duration">
+        <span asp-validation-for="Duration" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Price">Price (AZN):</label>
         <input type="number" step="any" class="form-control" asp-for="Price">
+        <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
