--- a/CourseManagementPortalWebUI/Views/Programs/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Programs/Create.cshtml
@@ -4,7 +4,7 @@
 
 @model AddUpdateProgramViewModel
 @{
-    if (Model == null)
+    if (Model.ProgramId == 0)
     {
         <h2>Add Program</h2>
     }
@@ -18,15 +18,15 @@
     <input asp-for="ProgramId" hidden />
 
     <div class="form-group">
-        <label asp-for="SelectedCourse.Id">Course:</label>
-        <select asp-for="SelectedCourse.Id" asp-items="new SelectList(Model?.Courses, nameof(CourseModel.Id), nameof(CourseModel.Name), nameof(CourseModel))" class="form-control">
+        <label asp-for="SelectedCourseId">Course:</label>
+        <select asp-for="SelectedCourseId" asp-items="new SelectList(Model?.Courses, nameof(CourseModel.Id), nameof(CourseModel.Name), nameof(CourseModel))" class="form-control">
             <option value="">Select Course</option>
         </select>
     </div>
 
     <div class="form-group">
-        <label asp-for="SelectedTeacher.Id">Teacher:</label>
-        <select asp-for="SelectedTeacher.Id" asp-items="new SelectList(Model?.Teachers, nameof(TeacherModel.Id), nameof(TeacherModel.FullName), nameof(TeacherModel))" class="form-control">
+        <label asp-for="SelectedTeacherId">Teacher:</label>
+        <select asp-for="SelectedTeacherId" asp-items="new SelectList(Model?.Teachers, nameof(TeacherModel.Id), nameof(TeacherModel.FullName), nameof(TeacherModel))" class="form-control">
             <option value="">Select Teacher</option>
         </select>
     </div>
