--- a/CourseManagementPortalWebUI/Views/Students/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Students/Create.cshtml
@@ -5,7 +5,7 @@
 @model StudentModel
 
 @{
-    if (Model == null)
+    if (Model.Id == 0)
     {
         <h2>Add Student</h2>
     }
@@ -20,17 +20,24 @@
     <div class="form-group">
         <label asp-for="Name">Name:</label>
         <input type="text" class="form-control" asp-for="Name">
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Surname">Name:</label>
+        <label asp-for="Surname">Surname:</label>
         <input type="text" class="form-control" asp-for="Surname">
+        <span asp-validation-for="Surname" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="BirthDate">Name:</label>
         <input type="date" class="form-control" asp-for="BirthDate">
+        <span asp-validation-for="BirthDate" class="text-danger"></span>
     </div>
     
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
