--- a/CourseManagementPortalWebUI/Views/Teachers/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Teachers/Create.cshtml
@@ -31,7 +31,7 @@
 
     <div class="form-group">
         <label asp-for="BirthDate">BirthDate:</label>
-        <input type="date" class="form-control" asp-for="BirthDate">
+        <input type="date" class="form-control" asp-for="BirthDate" value="@Model?.BirthDate.ToString("yyyy-MM-dd")">
         <span asp-validation-for="BirthDate" class="text-danger"></span>
     </div>
 
