Correct the naming

--- a/CourseManagementPortalWebUI/Views/Courses/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Courses/Create.cshtml
@@ -14,7 +14,7 @@
         <h2>Update Course</h2>
     }
 }
-<form asp-controller="Courses" asp-action="Create">
+<form asp-controller="Courses" asp-action="Save">
     <input asp-for="Id" hidden/>
 
     <div class="form-group">
