--- a/CourseManagementPortalWebUI/Views/Programs/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Programs/Create.cshtml
@@ -14,7 +14,7 @@
     }
 }
 
-<form asp-controller="Programs" asp-action="Create">
+<form asp-controller="Programs" asp-action="Save">
     <input asp-for="ProgramId" hidden />
 
     <div class="form-group">
