--- a/CourseManagementPortalWebUI/Views/Shared/_Layout.cshtml
+++ b/CourseManagementPortalWebUI/Views/Shared/_Layout.cshtml
@@ -30,22 +30,22 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Courses" asp-action="Index">Courses</a>
+                            <a class="nav-link text-dark" asp-controller="Courses" asp-action="Get">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Teachers" asp-action="Index">Teachers</a>
+                            <a class="nav-link text-dark" asp-controller="Teachers" asp-action="Get">Teachers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Programs" asp-action="Index">Programs</a>
+                            <a class="nav-link text-dark" asp-controller="Programs" asp-action="Get">Programs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Students" asp-action="Index">Students</a>
+                            <a class="nav-link text-dark" asp-controller="Students" asp-action="Get">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="StudentPrograms" asp-action="Index">(Students' Programs)</a>
+                            <a class="nav-link text-dark" asp-controller="StudentPrograms" asp-action="Get">(Students' Programs)</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Attendances" asp-action="AddProgress">Attendances</a>
+                            <a class="nav-link text-dark" asp-controller="Attendances" asp-action="Get">Attendances</a>
                         </li>
                     </ul>
                 </div>
