--- a/CourseManagementPortalWebUI/Views/StudentPrograms/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/StudentPrograms/Create.cshtml
@@ -14,7 +14,7 @@
         <h2>Update Student's Program</h2>
     }
 }
-<form asp-controller="StudentPrograms" asp-action="Create">
+<form asp-controller="StudentPrograms" asp-action="Save">
     <input asp-for="StudentProgramId" hidden />
 
     <div class="form-group">
