--- a/CourseManagementPortalWebUI/Views/Students/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Students/Create.cshtml
@@ -14,7 +14,7 @@
         <h2>Update Student</h2>
     }
 }
-<form asp-controller="Students" asp-action="Create">
+<form asp-controller="Students" asp-action="Save">
     <input asp-for="Id" hidden />
 
     <div class="form-group">
