--- a/CourseManagementPortalWebUI/Views/Teachers/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Teachers/Create.cshtml
@@ -14,7 +14,7 @@
         <h2>Update Teacher</h2>
     }
 }
-<form asp-controller="Teachers" asp-action="Create">
+<form asp-controller="Teachers" asp-action="Save">
     <input asp-for="Id" hidden />
 
     <div class="form-group">
