--- a/CourseManagementPortalWebUI/Views/Attendances/Create.cshtml
+++ b/CourseManagementPortalWebUI/Views/Attendances/Create.cshtml
@@ -8,7 +8,7 @@
     <h2>Add Student's Attendance</h2>
 }
 
-<form asp-controller="Attendances" asp-action="Create">
+<form asp-controller="Attendances" asp-action="Save">
     <input asp-for="StudentProgramId" hidden />
 
     <div class="form-group">
